src/tests/fixtures/preprocessor/errors/assert_include.h
#define Assert(a) a
#define Nothing(...)
